--- a/client/my-app/src/app/app.component.html
+++ b/client/my-app/src/app/app.component.html
@@ -1,2 +1,6 @@
 <h1>Book app</h1>
 <router-outlet></router-outlet>
+
+<button class="home-button" mat-icon-button [routerLink]="'home'">
+  <mat-icon>home</mat-icon>
+</button>
