--- a/client/my-app/src/app/app.component.css
+++ b/client/my-app/src/app/app.component.css
@@ -1,3 +1,12 @@
 h1 {
+  margin-top: 30px;
   text-align: center;
+  color: green;
+  font-weight: bold;
+}
+
+.home-button {
+  position: absolute;
+  top: 5px;
+  left: 5px;
 }
