--- a/client/my-app/src/app/book-add/book-add.component.css
+++ b/client/my-app/src/app/book-add/book-add.component.css
@@ -1,5 +1,40 @@
-.container {
+.search-container {
+  width: 100%;
+  height: auto;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  margin-top: 20px;
+}
+
+.button-search {
+  margin-bottom: 10px;
+}
+.book-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.book {
+  width: 350px;
+  height: 400px;
+  background-color: rgba(242, 242, 242, 0.821);
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgb(187, 187, 187);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 10px;
+  padding: 5px;
+  overflow: hidden;
+  text-align: center;
+}
+.book button {
+  margin: 10px 0;
+}
+
+.button-group {
+  display: flex;
+  gap: 5px;
 }
