--- a/client/my-app/src/app/user-library/user-library.component.css
+++ b/client/my-app/src/app/user-library/user-library.component.css
@@ -11,11 +11,19 @@
   align-items: center;
 }
 
+.card-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 16px;
+}
 .book-card {
   text-align: center;
   margin-top: 30px;
   width: 300px;
   padding: 20px;
+  display: flex;
+  justify-content: space-around;
 }
 
 .readmore-button {
