--- a/client/my-app/src/app/user-list/user-list.component.html
+++ b/client/my-app/src/app/user-list/user-list.component.html
@@ -14,15 +14,20 @@
       <mat-icon>cancel</mat-icon>
     </button>
 
-    <mat-card-header> {{ user.name }} {{ user.lastname }} </mat-card-header>
+    <mat-card-header>
+      <strong>{{ user.name }} {{ user.lastname }}</strong>
+    </mat-card-header>
     <mat-card-content>
-      <mat-icon matBadge="0" matBadgeOverlap="false" aria-hidden="false"
+      <mat-icon
+        [matBadge]="user.totalBooks"
+        matBadgeOverlap="false"
+        aria-hidden="false"
         >library_books</mat-icon
       >
     </mat-card-content>
     <mat-card-footer>
       <button mat-raised-button (click)="goUserLibrary(user.id)">
-        View Library
+        View Library <mat-icon>pageview</mat-icon>
       </button>
     </mat-card-footer>
   </mat-card>
