--- a/client/my-app/src/app/user-library/user-library.component.html
+++ b/client/my-app/src/app/user-library/user-library.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>User Detail</h2>
+  <h2>User Details</h2>
   <div class="data-container" *ngIf="user">
     <p>
       Name: <strong> {{ user.name }}</strong>
